--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,13 +14,38 @@ body{
     margin-right: 7%;
     height: 500px; 
 }
-.b{
+h1{
+    font-family: 'Libre Baskerville', serif;
+    background: rgba(65, 45, 45, 0.5);
+}
+#start{
+    font-family: 'Libre Baskerville', serif;
     margin-top: 20%;
 }
 #game{
     color: white; 
+    display: none;
+    margin-top: 5%;
     margin-bottom: 20%;
+    padding-bottom: 10px;
+    background: rgba(65, 45, 45, 0.5);
+}
+.time{
+    font-family: 'Libre Baskerville', serif;
+}
+.question{
+    font-family: 'Libre Baskerville', serif;
+    font-size: 20px;
+}
+.choices{
+    font-family: 'Libre Baskerville', serif;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    font-size: 15px;
 }
 .results{
+    font-family: 'Libre Baskerville', serif;
     display: none;
+    background: rgba(65, 45, 45, 0.5);
 }
+
